// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sellers getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-05-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T08:22:23.582Z,
  },
]
`;

exports[`sellers listMarketplaceParticipations returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "ListMarketplaces": Array [
      Object {
        "DefaultCountryCode": "CA",
        "DefaultCurrencyCode": "CAD",
        "DefaultLanguageCode": "en_CA",
        "DomainName": "www.amazon.ca",
        "MarketplaceId": "A2EUQ1WTGCTBG2",
        "Name": "Amazon.ca",
      },
      Object {
        "DefaultCountryCode": "US",
        "DefaultCurrencyCode": "USD",
        "DefaultLanguageCode": "en_US",
        "DomainName": "iba.login.amazon.com",
        "MarketplaceId": "A6W85IYQ5WB1C",
        "Name": "IBA",
      },
    ],
    "ListParticipations": Array [
      Object {
        "HasSellerSuspendedListings": false,
        "MarketplaceId": "A2EUQ1WTGCTBG2",
        "SellerId": "x",
      },
      Object {
        "HasSellerSuspendedListings": false,
        "MarketplaceId": "A6W85IYQ5WB1C",
        "SellerId": "x",
      },
    ],
    "NextToken": undefined,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`sellers listMarketplaceParticipationsByNextToken returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "ListMarketplaces": Array [
      Object {
        "DefaultCountryCode": "CA",
        "DefaultCurrencyCode": "CAD",
        "DefaultLanguageCode": "en_CA",
        "DomainName": "www.amazon.ca",
        "MarketplaceId": "A2EUQ1WTGCTBG2",
        "Name": "Amazon.ca",
      },
      Object {
        "DefaultCountryCode": "US",
        "DefaultCurrencyCode": "USD",
        "DefaultLanguageCode": "en_US",
        "DomainName": "iba.login.amazon.com",
        "MarketplaceId": "A6W85IYQ5WB1C",
        "Name": "IBA",
      },
    ],
    "ListParticipations": Array [
      Object {
        "HasSellerSuspendedListings": false,
        "MarketplaceId": "A2EUQ1WTGCTBG2",
        "SellerId": "x",
      },
      Object {
        "HasSellerSuspendedListings": false,
        "MarketplaceId": "A6W85IYQ5WB1C",
        "SellerId": "x",
      },
    ],
    "NextToken": undefined,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-05-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T08:22:23.582Z,
  },
]
`;
